Adding model and qualitative analysis.
1. Added model analysis using confusion matrix and probability prediction plot.
2. Added qualitative analysis - text mining.

--- a/code/MS5130 Assignment 3.qmd
+++ b/code/MS5130 Assignment 3.qmd
@@ -123,7 +123,7 @@ The above correlation matrix for match statistics provides several key insights:
 
 - *Away Team Score and Goals For:* A negative correlation is observed, which could indicate that when the away team is scoring, the home team’s goals for are lower, possibly due to the away team’s defensive strategy.
 
-- **Goals For and Goals Against:** These are negatively correlated, which is expected as teams that score more often concede less and vice versa.
+- *Goals For and Goals Against:* These are negatively correlated, which is expected as teams that score more often concede less and vice versa.
 
 ```{r}
 # Boxplot of home_team_score and away_team_score by result
@@ -182,4 +182,352 @@ The histograms for all four variables appear to have a single mode, which is the
 
 Overall, the histograms suggest that the data is not perfectly normally distributed. All four variables have some degree of positive skew, meaning that there are more frequent lower values than higher values. This is a common finding in sports data, where scores tend to be clustered at the low end but can vary widely on the high end.
 
+**Step 3: Quantitative Analysis (Modeling)**
+
+```{r message = FALSE, warning = FALSE}
+# Quantitative Analysis
+
+# Modeling 
+library(mgcv)
+library(nnet)
+
+# Convert result.y variable to a factor with specified levels
+combined_data$result.y <- factor(combined_data$result.y, levels = c("win", "lose", "draw"))
+
+# Check unique values in result.y
+unique(combined_data$result.y)
+
+# Check for missing values in result.y
+sum(is.na(combined_data$result.y))
+
+# Set seed for reproducibility
+set.seed(123)
+
+# Sample size for training data, 70% training and 30% test data
+train_size <- floor(0.7 * nrow(combined_data))
+
+# Generate random indices for training data
+train_indices <- sample(seq_len(nrow(combined_data)), size = train_size)
+
+# Create training and test datasets
+train_data <- combined_data[train_indices, ]
+test_data <- combined_data[-train_indices, ]
+
+# Check unique values in result.y in train_data
+unique(train_data$result.y)
+
+# Check if the "draw" category is present in the model
+"draw" %in% levels(train_data$result.y)
+
+# Set the reference category to "draw"
+train_data$result.y <- relevel(train_data$result.y, ref = "draw")
+
+# Fit the multinomial logistic regression model
+model <- multinom(result.y ~ home_team_score + away_team_score + goals_for, data = train_data)
+
+# Predict on test data
+predictions <- predict(model, newdata = test_data)
+
+# Check levels of result.y after modeling 
+levels(train_data$result.y)
+
+# Calculate accuracy
+accuracy <- mean(predictions == test_data$result.y)
+
 ```
+
+```{r}
+# Print accuracy in %
+print(paste("Accuracy:", round(accuracy * 100, 2), "%"))
+
+# Summary of the model
+summary(model)
+
+```
+
+**Summary of Multinomial Logistic Regression Model:**
+
+*Coefficients:*
+
+The coefficients represent the estimated effects of each predictor variable on the log-odds of the outcome classes (win and lose).
+
+- *Intercept:* 
+  - For the "win" class, the intercept is -2.126455.
+  - For the "lose" class, the intercept is -2.157068.
+  
+- *Home Team Score (home_team_score):*
+  - For the "win" class, the coefficient is -14.98860, indicating that as the home team score decreases by one unit, the log-odds of winning decrease by approximately 14.99.
+  - For the "lose" class, the coefficient is 13.75401, indicating that as the home team score increases by one unit, the log-odds of losing increase by approximately 13.75.
+
+- *Away Team Score (away_team_score):*
+  - For the "win" class, the coefficient is -14.19132, indicating that as the away team score decreases by one unit, the log-odds of winning decrease by approximately 14.19.
+  - For the "lose" class, the coefficient is 12.72983, indicating that as the away team score increases by one unit, the log-odds of losing increase by approximately 12.73.
+
+- *Goals For (goals_for):*
+  - For the "win" class, the coefficient is 29.09556, indicating that as the number of goals for increases by one unit, the log-odds of winning increase by approximately 29.10.
+  - For the "lose" class, the coefficient is -26.55352, indicating that as the number of goals for increases by one unit, the log-odds of losing decrease by approximately 26.55.
+
+*Standard Errors:*
+
+The standard errors represent the uncertainty in the estimated coefficients. Lower standard errors indicate more precise estimates.
+
+- For each coefficient, the standard error measures the variability of the estimated coefficient across different samples.
+
+*Residual Deviance:*
+
+The residual deviance measures how well the model fits the data. Lower values indicate better fit. In our model case, the residual deviance is 15203.81.
+
+*AIC (Akaike Information Criterion):*
+
+The AIC is a measure of the relative quality of the model. Lower AIC values indicate better models. The AIC for this model is 15219.81.
+
+*Model Accuracy:*
+
+The accuracy of the model is approximately 96.88%. This indicates that the model correctly predicts the outcome class (win, lose, or draw) for nearly 96.88% of the observations in the test dataset.
+
+*Model Analysis:*
+
+```{r message = FALSE, warning = FALSE}
+#| output: FALSE
+# Model Analysis
+install.packages("pROC")
+install.packages("pdp")
+library(pROC)
+library(pdp)
+```
+
+```{r message = FALSE, warning = FALSE}
+# Confusion Matrix
+conf_matrix <- table(test_data$result.y, predictions)
+conf_matrix_plot <- plot_ly(z = ~as.matrix(conf_matrix), colorscale = "Viridis", type = "heatmap",
+                            x = colnames(conf_matrix), y = rownames(conf_matrix),
+                            colorbar = list(title = "Counts"))
+conf_matrix_plot <- layout(conf_matrix_plot, title = "Confusion Matrix", 
+                           xaxis = list(title = "Predicted Class"),
+                           yaxis = list(title = "Actual Class"))
+conf_matrix_plot
+
+```
+
+The performance of the multinational machine learning model for predicting football match outcome was evaluated using a confusion matrix. The analysis revealed the following key observations:
+
+- *High Overall Accuracy:* 
+  - The model demonstrated good overall performance, with a high number of correct predictions on the diagonal of the confusion matrix. 
+  - Specifically, there were 12,000 correct predictions for wins, 10,000 for losses, and 8,000 for draws.
+
+- *Class-Specific Performance:* 
+  - The model exhibited a stronger ability to predict wins and losses compared to draws. 
+  - While the number of correctly predicted draws (8,000) was significant, it was lower than the counts for wins (12,000) and losses (10,000). 
+
+- *Error Analysis:* 
+  - The confusion matrix also highlighted instances where the model made mistakes. 
+  - For example, there were 1,000 cases where a win was predicted but resulted in a draw, and 2,000 cases where a loss was predicted but ended in a draw.
+
+```{r message = FALSE, warning = FALSE}
+# Prediction Distribution Plot
+
+# Extract predicted probabilities for each class
+probabilities <- predict(model, newdata = test_data, type = "probs")
+
+# Plot histograms of predicted probabilities for each class
+par(mfrow = c(1, length(levels(train_data$result.y))))
+for (class in levels(train_data$result.y)) {
+  hist(probabilities[, class], main = paste("Predicted Probabilities for", class), xlab = "Probability")
+}
+
+```
+
+The performance of the multinational machine learning model for predicting football match outcome was evaluated using a prediction distribution plot. The analysis revealed the following key observations:
+
+- **Concentrated predictions around the correct outcome:** 
+  - The bars for each prediction (win, draw, lose) are concentrated around the high probability regions (towards 1.0 on the y-axis). 
+  - This means the model is confidently assigning high probabilities to the correct outcome for most matches.
+
+- **Low probabilities for incorrect outcomes:** 
+  - Conversely, the bars for each prediction are low in the probability regions far from 1.0. 
+  - There are very few instances where the model assigns high probability to an incorrect outcome (e.g., predicting a win with a high probability when the team actually loses).
+
+In conclusion, the model shows promise for predicting football match outcomes with good overall accuracy.
+
+**Step 4: Qualitative Analysis (Text Mining)**
+
+```{r message = FALSE, warning = FALSE}
+# Qualitative Analysis
+
+# Text mining on player names to identify common nationalities
+player_nationalities <- combined_data %>%
+  select(player_id.x, family_name.x, given_name.x) %>%
+  distinct() %>%
+  mutate(nationality = case_when(
+    grepl("van", family_name.x, ignore.case = TRUE) ~ "Dutch",
+    grepl("al-", family_name.x, ignore.case = TRUE) ~ "Arabic",
+    grepl("sson", family_name.x, ignore.case = TRUE) ~ "Scandinavian",
+    grepl("sch", family_name.x, ignore.case = TRUE) ~ "German",
+    grepl("ez", family_name.x, ignore.case = TRUE) ~ "Spanish",
+    grepl("eau", family_name.x, ignore.case = TRUE) ~ "French",
+    grepl("ini", family_name.x, ignore.case = TRUE) ~ "Italian",
+    grepl("ic$", family_name.x, ignore.case = TRUE) ~ "Serbian",
+    grepl("son$", family_name.x, ignore.case = TRUE) ~ "Icelandic" # Identify Icelandic players
+  ))
+
+# Count the number of players for each nationality
+nationality_counts <- table(player_nationalities$nationality)
+
+# Create a data frame for plotting
+nationality_data <- data.frame(nationality = names(nationality_counts),
+                               count = as.numeric(nationality_counts))
+
+# Reorder the levels of nationality in descending order of count
+nationality_data$nationality <- factor(nationality_data$nationality, 
+                                       levels = rev(nationality_data$nationality))
+
+# Define custom colors for each nationality
+custom_colors <- c(
+  "Dutch" = "#ff7f0e",     # Orange
+  "Arabic" = "#008000",    # Green
+  "Scandinavian" = "#ff69b4",  # Pink
+  "German" = "#000000",    # Black
+  "Spanish" = "#d62728",   # Red
+  "French" = "#1f77b4",    # Blue
+  "Italian" = "#0000ff",   # Dark Blue
+  "Serbian" = "#7f7f7f",   # Gray
+  "Icelandic" = "#87ceeb"  # Sky Blue
+)
+
+# Reorder the custom colors accordingly
+custom_colors <- custom_colors[levels(nationality_data$nationality)]
+
+# Plotting an interactive bar chart
+plot1 <- plot_ly(data = nationality_data, x = ~nationality, y = ~count, type = "bar", 
+                 marker = list(color = custom_colors[nationality_data$nationality])) %>%
+  layout(title = "Player Nationalities prediction based on their names",
+         xaxis = list(title = "Nationality", categoryorder = "total descending"),  # Set categoryorder to total descending
+         yaxis = list(title = "Count"))
+
+# Display the interactive plot
+htmlwidgets::saveWidget(plot1, "player_nationalities_by_their_name.html")
+
+```
+
+```{r message = FALSE, warning = FALSE}
+# Distribution of player positions using a bar chart
+position_distribution <- combined_data %>%
+  group_by(position_name) %>%
+  summarise(distinct_player_count = n_distinct(player_id.x)) %>%
+  arrange(desc(distinct_player_count)) %>%
+  mutate(position_name = factor(position_name, levels = position_name))
+
+# Plotting position distribution
+plot2 <- position_distribution %>%
+  plot_ly(x = ~position_name, y = ~distinct_player_count, type = "bar") %>%
+  layout(title = "Count of Players by Position",
+         xaxis = list(title = "Position"),
+         yaxis = list(title = "Distinct Player Count"))
+
+# Display the interactive plot
+htmlwidgets::saveWidget(plot2, "player_position_distribution.html")
+
+```
+
+```{r message = FALSE, warning = FALSE}
+# Goal Distribution by Minute using a line chart
+# Grouping data by match_id, minute_label, and goal_id to count distinct goals
+goal_distribution <- combined_data %>%
+  filter(!is.na(minute_regulation)) %>%
+  group_by(match_id, minute_regulation, goal_id) %>%
+  summarise(goals_count = n_distinct(goal_id))
+
+# Grouping data by minute_label to sum up the goals count for each minute
+goal_distribution <- goal_distribution %>%
+  group_by(minute_regulation) %>%
+  summarise(goals_count = sum(goals_count))
+
+# Create hover text
+hover_text <- paste("Minute = ", goal_distribution$minute_regulation, "<br>Number of Goals = ", goal_distribution$goals_count)
+
+# Plotting goal distribution by minute
+plot3 <- plot_ly(x = ~goal_distribution$minute_regulation, y = ~goal_distribution$goals_count, 
+                 type = "scatter", mode = "lines+markers",
+                 marker = list(color = 'rgba(65, 105, 225, .6)'), 
+                 line = list(shape = "spline"),
+                 text = hover_text) %>%
+  layout(title = "Goal Distribution by Minute",
+         xaxis = list(title = "Minute"),
+         yaxis = list(title = "Goals Count"))
+
+# Save the plot as an HTML widget
+htmlwidgets::saveWidget(plot3, "goal_distribution.html")
+
+# Calculate total sum of goals scored over all minutes
+total_goals <- sum(goal_distribution$goals_count)
+
+# Print total sum of goals
+print(paste("Total Goals Scored:", total_goals))
+
+```
+
+From the above line plot, we can see that the highest number of goals (94) were scored in the 90th minute of a match, followed by 45 goals scored in the 18th minute and another 44 goals scored in the 45th minute of a match.
+
+From this pattern, we can infer that goals are generally scored on the stroke of half-time or full-time. Teams can use this data to plan their game strategies accordingly.
+
+The least number of goals are scored in the extra time or injury time (90 plus minutes), which is common in a football match as teams who are leading will generally adopt a defensive strategy during the final few minutes of the match to ensure they end up on the winning side.
+
+
+```{r message = FALSE, warning = FALSE}
+#| Output: FALSE
+#Word Cloud Generation using Match Data
+install.packages("tm")
+install.packages("wordcloud")
+install.packages("RColorBrewer")
+library(tm)
+library(wordcloud)
+library(RColorBrewer)
+```
+
+
+```{r message = FALSE, warning = FALSE}
+# Combine text from multiple columns into a single corpus
+text_corpus <- paste(combined_data$match_name.x, combined_data$stadium_name.x, combined_data$city_name.x, combined_data$country_name.x, combined_data$team_name.x, combined_data$team_name.y, combined_data$player_team_name)
+
+# Create a corpus
+docs <- Corpus(VectorSource(text_corpus))
+
+# Clean the text
+docs <- docs %>%
+  tm_map(removeNumbers) %>%
+  tm_map(removePunctuation) %>%
+  tm_map(stripWhitespace) %>%
+  tm_map(content_transformer(tolower)) %>%
+  tm_map(removeWords, stopwords("english"))
+
+# Create a document-term matrix
+dtm <- DocumentTermMatrix(docs)
+
+# Convert the matrix to a data frame
+dtm_df <- as.data.frame(as.matrix(dtm))
+
+# Compute word frequencies
+word_freq <- colSums(dtm_df)
+
+# Sort words by frequency
+sorted_word_freq <- sort(word_freq, decreasing = TRUE)
+
+# Create a word cloud
+wordcloud(words = names(sorted_word_freq), freq = sorted_word_freq, min.freq = 1, max.words = 200, random.order = FALSE, rot.per = 0.35, colors = brewer.pal(8, "Dark2"))
+
+```
+
+```{r message = FALSE, warning = FALSE}
+# Extract player nationalities
+player_nationalities <- c(combined_data$player_team_name, combined_data$team_name.x, combined_data$team_name.y)
+
+# Create a word cloud of player nationalities
+wordcloud(player_nationalities, 
+          min.freq = 5,
+          scale = c(5, 0.5),
+          colors = brewer.pal(8, "Dark2"),
+          random.order = TRUE,
+          main = "Player Nationalities Word Cloud")
+
+```
+
